--- a/골구조도_상세분석보고서.md
+++ b/골구조도_상세분석보고서.md
@@ -10,12 +10,12 @@
 
 ### 1.1 기본 정보
 - **시트명**: 골구조도
-- **크기**: 34행 × 13열 (A~M열)
-- **용도**: 건축 공사 일정 관리 (간트 차트 형태)
-- **대상 건물**: 201동
+- **크기**: 34행 × 16열 (A~P열)
+- **용도**: 건축 공사 일정 및 물량 관리 (간트 차트 형태)
+- **대상 건물**: 101동
 
 ### 1.2 파일 구조
-이 파일은 건축 공사의 골조 공정 일정을 관리하는 간트 차트 형태로 구성되어 있습니다. 각 층별/구역별 작업 일수를 기록하고, 전체 공사 기간을 자동 계산합니다.
+이 파일은 건축 공사의 골조 공정 일정과 물량을 관리하는 간트 차트 형태로 구성되어 있습니다. 각 층별/구역별 작업 일수와 물량(형틀, 철근, 콘크리트)을 기록하고, 전체 공사 기간을 자동 계산합니다.
 
 ---
 
@@ -25,67 +25,72 @@
 
 #### 행 2: 동별 정보
 - **C2**: "동별" (라벨)
-- **D2**: "201동" (건물 번호)
+- **D2**: "101동" (건물 번호)
 
 #### 행 3: 공사기간
 - **C3**: "공사기간" (라벨)
-- **D3**: `=M33` (수식 - 총 공사 기간을 개월 단위로 표시)
+- **D3**: `=P33` (수식 - 총 공사 기간을 개월 단위로 표시)
 
-#### 행 6: 헤더 라벨
-- **L6**: "작업일수" (라벨)
-- **M6**: "형틀(합계)" (라벨) - 갱폼+알폼+형틀 합계 (M²)
-- **N6**: "철근" (라벨) - 단위: TON
-- **O6**: "콘크리트" (라벨) - 단위: M³
+#### 행 6: 물량 및 작업일수 헤더
+- **L6**: "형틀" (라벨) - 단위: M²
+- **M6**: "철근" (라벨) - 단위: TON
+- **N6**: "콘크리트" (라벨) - 단위: M³
+- **O6**: "작업일수" (라벨)
 
-### 2.2 데이터 영역 (7~31행)
+### 2.2 데이터 영역 (7~32행)
 
-#### 층별/구역별 작업 일정 데이터
+#### 층별/구역별 작업 일정 및 물량 데이터
 
 **옥탑층 (행 7~8)**
 - **행 7**: 옥탑2
   - B7: "옥탑2"
   - F7: "옥탑2"
   - I7: "옥탑2"
-  - L7: 7일 (작업일수)
-  - M7: 형틀 합계 (M²) - 갱폼+알폼+형틀 합계
-  - N7: 철근 (TON)
-  - O7: 콘크리트 (M³)
+  - L7: 300 (형틀, M²)
+  - M7: 5 (철근, TON)
+  - N7: 150 (콘크리트, M³)
+  - O7: 7 (작업일수)
+
 - **행 8**: 옥탑1
   - B8: "옥탑1"
   - F8: "옥탑1"
   - I8: "옥탑1"
-  - L8: 7일 (작업일수)
-  - M8: 형틀 합계 (M²)
-  - N8: 철근 (TON)
-  - O8: 콘크리트 (M³)
+  - L8: 300 (형틀, M²)
+  - M8: 5 (철근, TON)
+  - N8: 150 (콘크리트, M³)
+  - O8: 7 (작업일수)
 
 **지상층 (행 9~28)**
 - **20층 (행 9)**
   - B9: 20 (층수)
-  - D9: 2001 (구역 코드)
-  - E9: 2002 (구역 코드)
-  - G9: 2003 (구역 코드)
-  - H9: 2004 (구역 코드)
-  - J9: 2005 (구역 코드)
-  - L9: 10일 (작업일수)
-  - M9: 형틀 합계 (M²) - 갱폼+알폼+형틀 합계
-  - N9: 철근 (TON)
-  - O9: 콘크리트 (M³)
+  - D9: 2001, E9: 2002, G9: 2003, H9: 2004, J9: 2005 (구역 코드)
+  - L9: 1,800 (형틀, M²)
+  - M9: 30 (철근, TON)
+  - N9: 600 (콘크리트, M³)
+  - O9: 10 (작업일수)
 
-- **19층 (행 10)**
-  - B10: 19
-  - D10: 1901, E10: 1902, G10: 1903, H10: 1904, J10: 1905
-  - L10: 8일
-
-- **18층 ~ 3층 (행 11~26)**
+- **19층 ~ 4층 (행 10~25)**
   - 각 층마다 5개 구역 코드 (D, E, G, H, J열)
-  - 대부분 8일 작업 (3층은 10일)
-  - 층수는 B열에 역순으로 표시 (20층 → 3층)
+  - L열: 1,800 (형틀, M²) - 표준값
+  - M열: 30 (철근, TON) - 표준값
+  - N열: 600 (콘크리트, M³) - 표준값
+  - O열: 8 (작업일수) - 표준 사이클
+
+- **3층 (행 26)**
+  - B26: 3
+  - D26: 301, E26: 302, G26: 303, H26: 304, J26: 305
+  - L26: 1,800 (형틀, M²)
+  - M26: 30 (철근, TON)
+  - N26: 600 (콘크리트, M³)
+  - O26: 10 (작업일수)
 
 - **2층 (행 27)**
   - B27: 2
   - D27: 201, E27: 202, H27: 103
-  - L27: 14일
+  - L27: 2,000 (형틀, M²)
+  - M27: 30 (철근, TON)
+  - N27: 800 (콘크리트, M³)
+  - O27: 14 (작업일수)
 
 - **1층 (행 28)**
   - B28: 1
@@ -95,33 +100,56 @@
   - H28: 103
   - I28: "코어2"
   - J28: "필로티"
-  - L28: 19일
+  - L28: 2,000 (형틀, M²)
+  - M28: 30 (철근, TON)
+  - N28: 800 (콘크리트, M³)
+  - O28: 19 (작업일수)
 
 **지하층 (행 29~31)**
-- **행 29**: B1
+- **행 29**: B1 (지하1층)
   - B29: "B1"
-  - L29: 31일
+  - L29: 5,000 (형틀, M²)
+  - M29: 50 (철근, TON)
+  - N29: 2,800 (콘크리트, M³)
+  - O29: 31 (작업일수)
 
-- **행 30**: B2
+- **행 30**: B2 (지하2층)
   - B30: "B2"
-  - L30: 25일
+  - L30: 5,000 (형틀, M²)
+  - M30: 60 (철근, TON)
+  - N30: 2,600 (콘크리트, M³)
+  - O30: 25 (작업일수)
 
 - **행 31**: 기초
   - B31: "기초"
-  - L31: 12일
+  - L31: 300 (형틀, M²)
+  - M31: 40 (철근, TON)
+  - N31: 500 (콘크리트, M³)
+  - O31: 12 (작업일수)
+
+**버림 (행 32)**
+- **행 32**: 버림
+  - B32: "버림"
+  - L32: 40 (형틀, M²)
+  - M32: 0 (철근, TON)
+  - N32: 10 (콘크리트, M³)
+  - O32: "계" (합계 라벨)
 
 ### 2.3 합계 영역 (32~33행)
 
-#### 행 32: 합계
-- **L32**: "계" (라벨)
-- **M32**: `=SUM(L7:M31)` (작업일수 합계)
+#### 행 32: 합계 라벨
+- **O32**: "계" (합계 라벨)
+- **P32**: `=SUM(O7:P31)` (작업일수 합계)
 
-#### 행 33: 개월 환산
-- **L33**: "개월" (라벨)
-- **M33**: `=ROUNDUP((15+M32+(M32/6))/30,2)` (총 공사 기간을 개월 단위로 계산)
+#### 행 33: 물량 합계 및 개월 환산
+- **L33**: `=SUM(L8:L32)` (형틀 합계, M²)
+- **M33**: `=SUM(M8:M32)` (철근 합계, TON)
+- **N33**: `=SUM(N8:N32)` (콘크리트 합계, M³)
+- **O33**: "개월" (단위 라벨)
+- **P33**: `=ROUNDUP((15+P32+(P32/6))/30,2)` (총 공사 기간을 개월 단위로 계산)
 
 **수식 설명**:
-- 기본 15일 + 작업일수 합계(M32) + 여유일수(M32/6)를 30으로 나누어 개월 단위로 환산
+- 기본 15일 + 작업일수 합계(P32) + 여유일수(P32/6)를 30으로 나누어 개월 단위로 환산
 - ROUNDUP 함수로 소수점 둘째 자리까지 올림 처리
 
 ---
@@ -132,10 +160,10 @@
 - 데이터 없음 (빈 열)
 
 ### 3.2 B열: 층/구역 정보
-- **데이터 개수**: 25개
+- **데이터 개수**: 26개
 - **데이터 유형**: 
   - 층수 (숫자): 20, 19, 18, ..., 3, 2, 1
-  - 구역명 (문자열): "옥탑2", "옥탑1", "B1", "B2", "기초"
+  - 구역명 (문자열): "옥탑2", "옥탑1", "B1", "B2", "기초", "버림"
 - **용도**: 층별 또는 구역별 식별자
 
 ### 3.3 C열: 헤더 라벨
@@ -193,22 +221,52 @@
 ### 3.11 K열
 - 데이터 없음 (빈 열)
 
-### 3.12 L열: 작업일수
+### 3.12 L열: 형틀 물량
+- **데이터 개수**: 28개
+- **데이터 유형**: 숫자 (형틀 면적, M²)
+- **내용**:
+  - L6: "형틀" (헤더)
+  - L7~L32: 각 층/구역별 형틀 물량 (M²)
+  - L33: `=SUM(L8:L32)` (형틀 합계)
+- **값 범위**: 40 ~ 5,000 M²
+- **용도**: 각 층/구역별 형틀(갱폼+알폼+형틀 합계) 물량
+
+### 3.13 M열: 철근 물량
+- **데이터 개수**: 28개
+- **데이터 유형**: 숫자 (철근 중량, TON)
+- **내용**:
+  - M6: "철근" (헤더)
+  - M7~M32: 각 층/구역별 철근 물량 (TON)
+  - M33: `=SUM(M8:M32)` (철근 합계)
+- **값 범위**: 0 ~ 60 TON
+- **용도**: 각 층/구역별 철근 물량
+
+### 3.14 N열: 콘크리트 물량
+- **데이터 개수**: 28개
+- **데이터 유형**: 숫자 (콘크리트 부피, M³)
+- **내용**:
+  - N6: "콘크리트" (헤더)
+  - N7~N32: 각 층/구역별 콘크리트 물량 (M³)
+  - N33: `=SUM(N8:N32)` (콘크리트 합계)
+- **값 범위**: 10 ~ 2,800 M³
+- **용도**: 각 층/구역별 콘크리트 물량
+
+### 3.15 O열: 작업일수
 - **데이터 개수**: 28개
 - **데이터 유형**: 숫자 (작업 일수)
 - **내용**:
-  - L6: "작업일수" (헤더)
-  - L7~L31: 각 층/구역별 작업 일수
-  - L32: "계" (합계 라벨)
-  - L33: "개월" (단위 라벨)
+  - O6: "작업일수" (헤더)
+  - O7~O31: 각 층/구역별 작업 일수
+  - O32: "계" (합계 라벨)
+  - O33: "개월" (단위 라벨)
 - **값 범위**: 7일 ~ 31일
 - **용도**: 각 층/구역별 작업 소요 일수
 
-### 3.13 M열: 계산 결과
+### 3.16 P열: 계산 결과
 - **데이터 개수**: 2개 (모두 수식)
 - **수식**:
-  - M32: `=SUM(L7:M31)` (작업일수 합계)
-  - M33: `=ROUNDUP((15+M32+(M32/6))/30,2)` (개월 환산)
+  - P32: `=SUM(O7:P31)` (작업일수 합계)
+  - P33: `=ROUNDUP((15+P32+(P32/6))/30,2)` (개월 환산)
 - **용도**: 총 작업일수 및 공사 기간 계산
 
 ---
@@ -216,47 +274,129 @@
 ## 4. 수식 분석
 
 ### 4.1 수식 개요
-- **총 수식 개수**: 3개
+- **총 수식 개수**: 5개
 - **시트간 참조**: 없음 (모두 같은 시트 내 참조)
 
 ### 4.2 수식 상세
 
 #### 4.2.1 D3: 공사기간 표시
 ```
-=M33
+=P33
 ```
-- **의미**: M33 셀의 값(개월 단위 공사 기간)을 표시
+- **의미**: P33 셀의 값(개월 단위 공사 기간)을 표시
 - **용도**: 공사기간을 헤더 영역에 표시
 
-#### 4.2.2 M32: 작업일수 합계
+#### 4.2.2 L33: 형틀 합계
 ```
-=SUM(L7:M31)
+=SUM(L8:L32)
 ```
-- **의미**: L7부터 M31까지의 범위 합계
-- **참고**: M7~M31은 비어있으므로 실제로는 L7~L31의 합계
+- **의미**: L8부터 L32까지의 형틀 물량 합계
+- **용도**: 전체 형틀 물량 합계 계산
+
+#### 4.2.3 M33: 철근 합계
+```
+=SUM(M8:M32)
+```
+- **의미**: M8부터 M32까지의 철근 물량 합계
+- **용도**: 전체 철근 물량 합계 계산
+
+#### 4.2.4 N33: 콘크리트 합계
+```
+=SUM(N8:N32)
+```
+- **의미**: N8부터 N32까지의 콘크리트 물량 합계
+- **용도**: 전체 콘크리트 물량 합계 계산
+
+#### 4.2.5 P32: 작업일수 합계
+```
+=SUM(O7:P31)
+```
+- **의미**: O7부터 P31까지의 범위 합계
+- **참고**: P7~P31은 비어있으므로 실제로는 O7~O31의 합계
 - **용도**: 모든 층/구역의 작업일수 합계 계산
 
-#### 4.2.3 M33: 개월 환산
+#### 4.2.6 P33: 개월 환산
 ```
-=ROUNDUP((15+M32+(M32/6))/30,2)
+=ROUNDUP((15+P32+(P32/6))/30,2)
 ```
 - **의미**: 
-  - 기본 15일 + 작업일수 합계(M32) + 여유일수(M32/6)를 30으로 나누어 개월 단위로 환산
+  - 기본 15일 + 작업일수 합계(P32) + 여유일수(P32/6)를 30으로 나누어 개월 단위로 환산
   - ROUNDUP 함수로 소수점 둘째 자리까지 올림
 - **계산 로직**:
   1. 기본 여유일수: 15일
-  2. 총 작업일수: M32
-  3. 추가 여유일수: M32/6 (작업일수의 1/6)
-  4. 총 일수 = 15 + M32 + (M32/6)
+  2. 총 작업일수: P32
+  3. 추가 여유일수: P32/6 (작업일수의 1/6)
+  4. 총 일수 = 15 + P32 + (P32/6)
   5. 개월 환산 = 총 일수 / 30
   6. 소수점 둘째 자리까지 올림
 - **용도**: 총 공사 기간을 개월 단위로 계산
 
 ---
 
-## 5. 데이터 패턴 분석
+## 5. 각 층별 물량 데이터 상세
 
-### 5.1 층별 작업 일수 패턴
+### 5.1 층별 형틀, 철근, 콘크리트 물량표
+
+| 층/구역 | 형틀 (M²) | 철근 (TON) | 콘크리트 (M³) | 작업일수 |
+|---------|-----------|------------|---------------|----------|
+| 옥탑2 | 300 | 5 | 150 | 7 |
+| 옥탑1 | 300 | 5 | 150 | 7 |
+| 20층 | 1,800 | 30 | 600 | 10 |
+| 19층 | 1,800 | 30 | 600 | 8 |
+| 18층 | 1,800 | 30 | 600 | 8 |
+| 17층 | 1,800 | 30 | 600 | 8 |
+| 16층 | 1,800 | 30 | 600 | 8 |
+| 15층 | 1,800 | 30 | 600 | 8 |
+| 14층 | 1,800 | 30 | 600 | 8 |
+| 13층 | 1,800 | 30 | 600 | 8 |
+| 12층 | 1,800 | 30 | 600 | 8 |
+| 11층 | 1,800 | 30 | 600 | 8 |
+| 10층 | 1,800 | 30 | 600 | 8 |
+| 9층 | 1,800 | 30 | 600 | 8 |
+| 8층 | 1,800 | 30 | 600 | 8 |
+| 7층 | 1,800 | 30 | 600 | 8 |
+| 6층 | 1,800 | 30 | 600 | 8 |
+| 5층 | 1,800 | 30 | 600 | 8 |
+| 4층 | 1,800 | 30 | 600 | 8 |
+| 3층 | 1,800 | 30 | 600 | 10 |
+| 2층 | 2,000 | 30 | 800 | 14 |
+| 1층 | 2,000 | 30 | 800 | 19 |
+| B1 | 5,000 | 50 | 2,800 | 31 |
+| B2 | 5,000 | 60 | 2,600 | 25 |
+| 기초 | 300 | 40 | 500 | 12 |
+| 버림 | 40 | 0 | 10 | - |
+| **합계** | **합계 수식** | **합계 수식** | **합계 수식** | **합계 수식** |
+
+### 5.2 물량 패턴 분석
+
+#### 5.2.1 형틀 물량 패턴
+- **옥탑층**: 300 M² (작은 규모)
+- **일반층 (20층~4층)**: 1,800 M² (표준값)
+- **3층**: 1,800 M²
+- **2층, 1층**: 2,000 M² (증가)
+- **지하층 (B1, B2)**: 5,000 M² (대규모)
+- **기초**: 300 M²
+- **버림**: 40 M²
+
+#### 5.2.2 철근 물량 패턴
+- **옥탑층**: 5 TON (작은 규모)
+- **일반층 (20층~1층)**: 30 TON (표준값)
+- **지하층 (B1)**: 50 TON
+- **지하층 (B2)**: 60 TON (최대값)
+- **기초**: 40 TON
+- **버림**: 0 TON (철근 없음)
+
+#### 5.2.3 콘크리트 물량 패턴
+- **옥탑층**: 150 M³ (작은 규모)
+- **일반층 (20층~4층)**: 600 M³ (표준값)
+- **3층**: 600 M³
+- **2층, 1층**: 800 M³ (증가)
+- **지하층 (B1)**: 2,800 M³ (최대값)
+- **지하층 (B2)**: 2,600 M³
+- **기초**: 500 M³
+- **버림**: 10 M³
+
+### 5.3 작업 일수 패턴
 
 | 층/구역 | 작업일수 | 비고 |
 |---------|----------|------|
@@ -267,11 +407,11 @@
 | 3층 | 10일 | |
 | 2층 | 14일 | |
 | 1층 | 19일 | 코어/필로티 포함 |
-| B1 | 31일 | 지하1층 |
+| B1 | 31일 | 지하1층 (최대) |
 | B2 | 25일 | 지하2층 |
 | 기초 | 12일 | |
 
-### 5.2 구역 코드 패턴
+### 5.4 구역 코드 패턴
 
 **일반층 (20층 ~ 3층)**
 - 각 층마다 5개 구역 코드
@@ -283,44 +423,46 @@
 - 1층: 101, 102, 코어1, 필로티, 103, 코어2, 필로티 (복합 구조)
 - 옥탑층: 구역 코드 없음, 구역명만 표시
 
-### 5.3 작업 일수 분포
-
-- **최소**: 7일 (옥탑층)
-- **최대**: 31일 (B1층)
-- **평균**: 약 12일 (추정)
-- **표준 사이클**: 8일 (19층 ~ 4층)
-
 ---
 
 ## 6. 파일 용도 및 활용 방안
 
 ### 6.1 주요 용도
 1. **공사 일정 관리**: 각 층별/구역별 작업 일수 추적
-2. **총 공사 기간 계산**: 자동으로 개월 단위 공사 기간 산출
-3. **간트 차트 기반**: 층별 작업 순서 및 기간 시각화
+2. **물량 관리**: 각 층별 형틀, 철근, 콘크리트 물량 추적
+3. **총 공사 기간 계산**: 자동으로 개월 단위 공사 기간 산출
+4. **간트 차트 기반**: 층별 작업 순서 및 기간 시각화
 
 ### 6.2 데이터 입력 패턴
 - **B열**: 층수 또는 구역명 입력
 - **D~J열**: 구역 코드 또는 구역명 입력
-- **L열**: 각 층/구역별 작업 일수 입력
-- **M열**: 자동 계산 (수정 불필요)
+- **L열**: 각 층/구역별 형틀 물량 입력 (M²)
+- **M열**: 각 층/구역별 철근 물량 입력 (TON)
+- **N열**: 각 층/구역별 콘크리트 물량 입력 (M³)
+- **O열**: 각 층/구역별 작업 일수 입력
+- **P열**: 자동 계산 (수정 불필요)
 
 ### 6.3 애플리케이션 구현 시 고려사항
 
 #### 6.3.1 데이터 구조
-- 층별/구역별 작업 일정을 관리하는 테이블 구조 필요
+- 층별/구역별 작업 일정 및 물량을 관리하는 테이블 구조 필요
 - 구역 코드와 구역명을 구분하여 저장
+- 형틀, 철근, 콘크리트 물량은 숫자로 저장
 - 작업 일수는 숫자로 저장
 
 #### 6.3.2 계산 로직
-- 총 작업일수 합계: `SUM(L7:L31)`
+- 형틀 합계: `SUM(L8:L32)`
+- 철근 합계: `SUM(M8:M32)`
+- 콘크리트 합계: `SUM(N8:N32)`
+- 총 작업일수 합계: `SUM(O7:O31)`
 - 개월 환산: `ROUNDUP((15 + 총작업일수 + 총작업일수/6) / 30, 2)`
 - 공사기간 표시: 개월 환산 결과를 헤더에 표시
 
 #### 6.3.3 UI 구성
-- 층별/구역별 작업 일정 입력 폼
+- 층별/구역별 작업 일정 및 물량 입력 폼
+- 형틀, 철근, 콘크리트 물량 입력 필드
 - 작업 일수 입력 필드
-- 총 공사 기간 자동 계산 및 표시
+- 물량 합계 및 총 공사 기간 자동 계산 및 표시
 - 간트 차트 형태의 시각화 (선택사항)
 
 ---
@@ -328,31 +470,34 @@
 ## 7. 주요 특징
 
 ### 7.1 장점
-1. **자동 계산**: 총 공사 기간이 자동으로 계산됨
+1. **자동 계산**: 총 공사 기간 및 물량 합계가 자동으로 계산됨
 2. **구조화된 데이터**: 층별/구역별로 체계적으로 정리
-3. **간단한 구조**: 복잡한 수식 없이 직관적인 구조
+3. **물량 통합 관리**: 형틀, 철근, 콘크리트 물량을 한눈에 확인 가능
+4. **간단한 구조**: 복잡한 수식 없이 직관적인 구조
 
 ### 7.2 개선 가능 사항
-1. **M32 수식 범위**: `=SUM(L7:M31)`에서 M7~M31은 비어있으므로 `=SUM(L7:L31)`로 수정 가능
-2. **데이터 검증**: 작업 일수가 음수이거나 비정상적으로 큰 값 입력 방지
+1. **P32 수식 범위**: `=SUM(O7:P31)`에서 P7~P31은 비어있으므로 `=SUM(O7:O31)`로 수정 가능
+2. **데이터 검증**: 물량이나 작업 일수가 음수이거나 비정상적으로 큰 값 입력 방지
 3. **구역 코드 규칙**: 구역 코드 생성 규칙을 명확히 문서화
+4. **단위 표시**: 각 열의 헤더에 단위(M², TON, M³)를 명확히 표시
 
 ---
 
 ## 8. 결론
 
-`골구조도.xlsx` 파일은 201동 건축 공사의 골조 공정 일정을 관리하는 간트 차트 형태의 파일입니다. 각 층별/구역별 작업 일수를 기록하고, 자동으로 총 공사 기간을 개월 단위로 계산합니다.
+`골구조도.xlsx` 파일은 101동 건축 공사의 골조 공정 일정 및 물량을 관리하는 간트 차트 형태의 파일입니다. 각 층별/구역별 작업 일수와 물량(형틀, 철근, 콘크리트)을 기록하고, 자동으로 총 공사 기간 및 물량 합계를 계산합니다.
 
 **주요 특징**:
 - 단일 시트 구조로 간단하고 직관적
-- 3개의 수식으로 자동 계산 구현
+- 5개의 수식으로 자동 계산 구현
 - 층별 작업 일수 패턴이 명확함 (표준 사이클: 8일)
-- 총 25개 층/구역의 작업 일정 관리
+- 층별 물량 패턴이 일정함 (일반층: 형틀 1,800 M², 철근 30 TON, 콘크리트 600 M³)
+- 총 26개 층/구역의 작업 일정 및 물량 관리
 
 **데이터 규모**:
-- 총 34행 × 13열
-- 25개 층/구역 데이터
-- 3개 수식 (자동 계산)
+- 총 34행 × 16열
+- 26개 층/구역 데이터
+- 5개 수식 (자동 계산)
+- 형틀, 철근, 콘크리트 물량 데이터 포함
 
-이 파일을 기반으로 웹 애플리케이션을 구현할 경우, 층별/구역별 작업 일정 입력 기능과 자동 계산 기능을 제공하면 됩니다.
-
+이 파일을 기반으로 웹 애플리케이션을 구현할 경우, 층별/구역별 작업 일정 및 물량 입력 기능과 자동 계산 기능을 제공하면 됩니다.
